# reegis_phd

./: README.md  README.rst  setup.cfg  setup.py
my_reegis/: __init__.py  alternative_scenarios.py  analyzer.py  data_analysis.py  embedded_model.py  figures.py  friedrichshagen_scenarios.py  main.py  my_reegis.ini  plot.ini  plot.py  plots_de21.py  rawtable.py  reegis_analyser.py  reegis_plot.py  regional_results.py  reproduce.py  results.py  snippets.py  upstream_analysis.py
my_reegis/data/figures/: deutschlandmodell_vereinfacht.graphml  solph_example_deutsch.graphml  solph_modular.graphml
my_reegis/data/static/: berlin_electricity_data_2014_berlin.csv  electricity_import.csv  full_load_hours_re_bdew_states.csv
my_reegis/deprecated/: camelrer.py  experimental_analysis.py  reegis_analyser.py
my_reegis/figures/: figures.py  figures_3x.py  figures_4x.py  figures_5x.py  figures_6x.py  figures_base.py
reegis_phd/: __init__.py  alternative_scenarios.py  data_analysis.py  embedded_model.py  main.py  my_reegis.ini  plots_de21.py  rawtable.py  reegis_plot.py  regional_results.py  reproduce.py  results.py  snippets.py
reegis_phd/data/figures/: berlinmodell_vereinfacht.graphml  deutschlandmodell_vereinfacht.graphml  transformer_mit_flow.graphml
reegis_phd/data/geometries/: de21_renpass_frauke_wiese.geojson
reegis_phd/data/static/: 1129089_combined_c.csv  (+5 more)
reegis_phd/deprecated/: analyzer.py  rest_in_peace.py
reegis_phd/figures/: __init__.py  figures.py  figures2.py  figures_3x.py  figures_4x.py  figures_5x.py  figures_6x.py  figures_base.py  variable_chp_plot.py
